@@ -2,17 +2,17 @@
 Hash: SHA256
 
 DIST libkolabxml-0.8.1.tar.gz 113707 SHA256 03ed6cdc89ec92c36427f6e30b020285b6e5256ce56f2486c8355f51b5b75180 SHA512 379e7fcf5082907abb84a7ae359c549dbdd98bf2c7c93a73142659fb55753eb6f78cc4e6bca1708aa7f0d768a0ffad172e24c297c9c5abaa4257815a959ea0e5 WHIRLPOOL 0267f2b00c9b9aed3e5efa2260d5a8d3e57d606e0ace5d715af418f98672af309ed6295e8e86b9b65433bcb2733e2b82ce67ff73d867356f089941c855a89b3a
-EBUILD libkolabxml-0.8.1.ebuild 1226 SHA256 72a74ad95a3cbd0ea58309afa93ea2f58b51ea8ce15e8cbc70e67dcd9a664efb SHA512 1c02875b0a1a290f7f712133dad821af1f112dbb0614186e1515f6d0a8206e446ce9a7f3e0c9f90c30df99770f8e9f94b38d5f556fff69c4ed393a4ceebc4bf0 WHIRLPOOL e19a15d530e896be5fac2746328fdaaa473cad52d1f6512fdabf2d50213fd466d3c26341c18077c323606cf537e69127f0b4c3dfcd2b28a57877432ca84a931d
-MISC ChangeLog 1698 SHA256 a1b205d222ef50b83bacce884e0c9ca44b2f65358bd114829316aa55b2b327b9 SHA512 791579263d4c70380e62104e0cd23e77aa28c230190f9be7f7cf1bb433df6e318f081564a25498612a32e28884a1fb46b55ad61ba924411f1ae0bc2eef8e4452 WHIRLPOOL bf1a570ecc61df85cca919b82d9d155e8d8082f81cfd4ad73f9e41c05d55ce0bb0dff26e9835019e1e01162b57fef459d4b73f487530fb837db752a1b504f825
+EBUILD libkolabxml-0.8.1.ebuild 1178 SHA256 7735f3dcbe13af2b4d880a610380313494ada1824eebfc85004ad03c73c094cc SHA512 f7919e02f4ed19c74e17f1f0ee5cdd2b2bb41559178edc77d899ff1a9d9dca67f9ff2171db44e5b43cf51628a8a979c724780b4617f799f71ed997b8f4d3f73a WHIRLPOOL e54a325718fe039d71b48e1f2258da3a81b786a0d4ceb3ee19d3f9f30d86eddb72250c0b8d91a092d8dbb1256450bc9f9f45123317fa21fb931e2e58105b465d
+MISC ChangeLog 1834 SHA256 37bb11c9fd5a0bcab5343098aec6f18a6028dea8846ee2acf02c32dac6b7bcfe SHA512 e7b816cbb01963a76dcf7138b992c12ff90640c4e7fca44cb24f0cbb25fd03ae2beed12dd12d4348d6c0e79a0ddfb5ae61231d949a2b2beb22a33e252d0d8f80 WHIRLPOOL 242c414203797623d09a5fd6139f79899d82fd47475710175564000d554c11aab80a52a11bbf4a519e3d7c2b0be007012b22fd7c7cc0a20735c0a4ec476c5bb3
 MISC metadata.xml 225 SHA256 645c9eb24c73330a5beb926196774cb6ccf2bdce96b4b52d44b14bef0050bf1b SHA512 7657a64687539c869493ab1dbfb718245f7d01e849395bfbc115a1b9f1ee714f4784708358dd41bf95957eeb36c473c05a85a01b581ba62ba0e32e07503a4185 WHIRLPOOL a69324ab02cb8fdc7205cd0bdf069cab369e5374b537ae579b2b1b41f8e75aed38d209d2b9d59b646b63f7fa887a5f8aa7eea68cec3280d734b2e8cec5e4ca92
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRB39WAAoJEMbwO6tnXQ0svSoIAJ4lXXd5RbCJ2dkWG+wo5zHI
-hIvpUBPMX2jw9bktt29a5YvtbnsTxHeB7e/enSB2Z/wBBfcS4KfmRLOwFZ1z5oSH
-NZ694IgNuIRL5Z5U32GezI6g9Tjsbk12EW5H+9zzHFYjmwM6fKkj5KLzs+xdXqJO
-/cePtkNqh2d1NA9144Zctccuun5jHoKfObiCAFFG/uE7yXhDabHqxupYfym7YdcU
-TPkcmJNNeGIFk2t1RMDnllQuf3ciNgZLpb4PDyB778vyKD1z6WIiw6LrpIe0x2Pm
-V864p7O6TEkcYQov9kgyh8GqZL15TvBZuQY3xvIKSaaSmNzgd3QwkOiz5SIjSKA=
-=gkSl
+iQEcBAEBCAAGBQJRB4KdAAoJEMbwO6tnXQ0sZioIALfmFdQEoq9o8nbChTib2peM
+QQKDw7uclbErrW1T6FtiuHgtDBMR40Vrukucj6bKY7MNGDob3AJRQC8OjaB+uIto
+S7h9gqDZpI3NOyoEzAezu/kFKoKzirM/4iSLbpmACbOseaS4WHGdYj8jv4WFWhha
+Vaga6XnNCqJmzDr6Rexg+i1zh5IGKXaEtGcIAn/ghMXbBZJgwdPGWT9bUtHMQOcG
+D1hacwrBR9vO0RB6FqULujfWO2KDw8Ajc+M0VL2H6kPSOhBo6d2fmZvHLtWOwFI/
+94WaiK5gyn4ItwK3vgVptbOI5uuNuZptBEq6g0oxfkRbCbkU13g/js4CnY10R0g=
+=/a/M
 -----END PGP SIGNATURE-----
