@@ -1,6 +1,10 @@
 # ChangeLog for net-libs/libkolabxml
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libkolabxml/ChangeLog,v 1.10 2013/01/29 07:54:11 kensington Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libkolabxml/ChangeLog,v 1.11 2013/01/29 08:08:11 kensington Exp $
+
+  29 Jan 2013; Michael Palimaka <kensington@gentoo.org>
+  libkolabxml-0.8.1.ebuild:
+  Revert previous commit that introduces breakage.
 
   29 Jan 2013; Michael Palimaka <kensington@gentoo.org>
   libkolabxml-0.8.1.ebuild:
